fixing background image when the video doesn't work, mainly on mobile phones

--- a/app/assets/stylesheets/components/_video.scss
+++ b/app/assets/stylesheets/components/_video.scss
@@ -8,7 +8,7 @@ video {
   height: auto;
   z-index: -100;
   transform: translateX(-50%) translateY(-50%);
-  background: url('bgvideo.png') no-repeat;
   background-size: cover;
   transition: 1s opacity;
+  background: url('bgvideo.png') no-repeat center center;
 }
